--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "ws": "^8.11.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.20.7",
