--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URL = mongodb+srv://HWuser:Julia0815@cluster0.qojb1zf.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://HWuser:wp88888888@cluster0.qojb1zf.mongodb.net/?retryWrites=true&w=majority
