--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,13 @@
     "axios": "^1.2.2",
     "base64url": "^3.0.1",
     "cbor-js": "^0.1.0",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "stream-browserify": "^3.0.0",
     "styled-component": "^2.8.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
