--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "base64url": "^3.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
